security-group.tf
resource "aws_security_group" "web_server" {                  
  name = "${var.server_name}"                                 
                                                              
  ingress {                                                   
    protocol    = "tcp"                                       
    from_port   = 22                                          
    to_port     = 22                                          
    cidr_blocks = ["0.0.0.0/0"]                               
  }                                                           
                                                              
  ingress {                                                   
    protocol    = "tcp"                                       
    from_port   = 80                                          
    to_port     = 80                                          
    cidr_blocks = ["0.0.0.0/0"]                               
  }                                                           
                                                              
  egress {                                                    
    protocol    = -1                                          
    from_port   = 0                                           
    to_port     = 0                                           
    cidr_blocks = ["0.0.0.0/0"]                               
  }                                                           
}
